--- a/views/Partials/Header.ejs
+++ b/views/Partials/Header.ejs
@@ -2,6 +2,22 @@
 <header id="topnav">
     <div class="topbar-main">
         <div class="container-fluid">
+            <div class="menu-extras topbar-custom">
+                <ul class="float-right list-unstyled mb-0 ">
+
+                    <li class="menu-item">
+                        <!-- Mobile menu toggle-->
+                        <a class="navbar-toggle nav-link" id="mobileToggle">
+                            <div class="lines">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </a>
+                        <!-- End mobile menu toggle-->
+                    </li>
+                </ul>
+            </div>
             <div class="clearfix"></div>
         </div> <!-- end container -->
     </div>
